# GestureDrone

./: .gitignore  COMMANDS.md  GESTURE_DRONE_README.md  IMPLEMENTATION_SUMMARY.md  control.py
GestureData(IARC)/Data_IARC_Collection/: DataProcessing.py  Gesture_IARC.py
GestureData(IARC)/GestureData(New)/: GestureCollection.py  GestureInference(new)  GestureTraining(new)  gesture_command4_classifier.pt  gesture_command4_label_map.json  gesture_command4_model_meta.json  gesture_data_command4_processed.csv  gesture_data_command4_raw.csv
GestureData(Old)/Data_old_CSV/: gesture_data_full.csv
GestureData(Old)/Data_old_Collection/: MergeData.py
GestureData(Old)/Training&Inference(Old)/: GestureInference(Old).py
Gesture_to_flight(ROS)/: QUICKSTART.md  flightInstructions.py  gesture_inference_ros_node.py  package.xml  setup_and_run.sh
Gesture_to_flight(ROS)/gesture_to_flight/: gesture_inference_ros_node.py
Gesture_to_flight(ROS)/install/: setup.bash  setup.sh
Gesture_to_flight(ROS)/log/: latest_build
gesture_cv/: package.xml  setup.cfg  setup.py
gesture_cv/GestureData/: GestureData.py  GestureData1.py  (+9 more)
gesture_to_flight/: CMakeLists.txt  README.md  flight_instructions.cpp  flight_instructions.py  package.xml  setup.py
gesture_to_flight/gesture_to_flight/: gesture_inference_ros_node.py
gesture_to_flight/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
gesture_to_flight/launch/: gesture_drone.launch.py
gesture_to_flight/src/: flight_instructions.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
(+10 files in other folders)
