<?xml version="1.0"?>
<package format="3">
  <name>gesture_to_flight</name>
  <version>0.0.0</version>
  <description>Gesture to flight translation node (C++ and Python variants)</description>
  <maintainer email="you@example.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
